# this-is-fine-client

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.fe45c85  README.md  This_is_Fine_en_US.ts  chat-api.h  chatchangesettings.cpp  chatchangesettings.h  chatchangesettings.ui  chatclient.cpp  chatclient.h  chatcreatewindow.cpp  chatcreatewindow.h  chatcreatewindow.ui  chatsettingswindow.cpp  chatsettingswindow.h  chatsettingswindow.ui  chatsitemwidget.cpp  chatsitemwidget.h  chatsitemwidget.ui  logger_util.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resources.qrc  token.txt
.cache/clangd/index/: chatcreatewindow.h.F7FBBB57DDD6CA0F.idx  chatsitemwidget.h.72B4F2047CD6376D.idx  mainwindow.h.B2B4FC18F5DC7D58.idx
ClientChat-example/: CMakeLists.txt  CMakePresets.json  README.md  RU-README.md  main.cpp
ClientChat-example/include/: chat-api.h
contexts/: ssdss.json
temp_new_files/: chat-api.h  mainwindow.cpp
tests/: test_chatcreate.cpp  test_chatsitemwidget.cpp  test_mainwindow.cpp
